--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.0",
     "node-static": "^0.7.9",
     "raw-loader": "^0.5.1",
     "typescript": "^2.0.3",
