--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
         "emitDecoratorMetadata": true,
         "lib": [
             "es2015", "dom"
+        ],
+        "types": [
+            "jasmine"
         ]
     },
     "awesomeTypeScriptLoaderOptions": {
