--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "karma-webpack": "^1.8.0",
     "node-static": "^0.7.9",
     "raw-loader": "^0.5.1",
-    "typescript": "^2.0.3",
+    "typescript": "2.0.10",
     "webpack": "^2.1.0-beta.25"
   }
 }
