--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "zone.js": "^0.6.26"
   },
   "devDependencies": {
+    "@types/jasmine": "2.5.35",
     "@types/node": "^6.0.45",
     "@types/webpack-env": "^1.12.1",
     "angular2-template-loader": "^0.5.0",
